@@ -22,5 +22,6 @@ namespace Ermes.MapRequests.Dto
         public string ErrorMessage { get; set; }
         public OrganizationDto Organization { get; set; }
         public string Username { get; set; }
+        public int Resolution { get; set; } = 10;
     }
 }
